# llfile

./: README-ZH.md  README.md  l10n.yaml  pubspec.yaml
android/app/: build.gradle  build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  theme.dart
lib/events/: addon_events.dart  events.dart  fs_events.dart  layout_events.dart  md_events.dart  path_events.dart  sbc_auth_events.dart  sbn_events.dart  settings_events.dart  some_events.dart  ui_events.dart
lib/isolates/: sandbar_node_worker.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/mixins/: pop_operate_mixin.dart  sbc_auth_mixin.dart  sbn_mixin.dart  task_mixin.dart
lib/models/: app_config_model.dart  app_config_model.g.dart  app_states_model.dart  app_states_model.g.dart  common_model.dart  common_model.g.dart  fs_model.dart  fs_model.g.dart  markdown_model.dart  markdown_model.g.dart  operate_record_model.dart  operate_record_model.g.dart  path_model.dart  path_model.g.dart  sbc_api_model.dart  sbc_api_model.g.dart  sbc_auth_model.dart  sbc_auth_model.g.dart  sbc_object_model.dart  sbc_object_model.g.dart  sbn_model.dart  sbn_model.g.dart  types.dart
lib/pages/: fsmgr_page.dart  settings_page.dart
lib/service/: auth_service.dart  common_service.dart  sbc_auth_service.dart  sbc_device_service.dart
lib/tasks/: base_task.dart  fs_tasks.dart  (+1 more)
linux/: CMakeLists.txt  my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: lldisk.rs  llfs.rs  mod.rs  sandbar.rs  sandbar_node.rs  simple.rs
rust/src/api/sandbar/: client_api.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+59 files in other folders)
